fix spacing on non-expandible menu items

--- a/src/components/layout/Navigation/Navigation.module.css
+++ b/src/components/layout/Navigation/Navigation.module.css
@@ -3,12 +3,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  background: yellow;
 }
 
 .container {
-  width: 100%;
   display: flex;
-  flex-direction: row;
+  align-items: stretch;
   justify-content: space-between;
 }
